--- a/src/iaweb/mosaic/browser/static/slider.ideabox.less
+++ b/src/iaweb/mosaic/browser/static/slider.ideabox.less
@@ -230,7 +230,7 @@ html[xmlns] .flexslider .slides {
                         display: none;
                     }
 		    .documentByLine{
-			    color: @spirit-pink;
+			    color: #d7004e;
 			    font-family: Abel;
 			    padding: 1rem 0;
 			    abbr{
@@ -357,7 +357,7 @@ html[xmlns] .flexslider .slides {
                 bottom: 0;
                 margin-left: 2em;
                 padding: 1em;
-                background: @spirit-pink;
+                background: #d7004e;
                 z-index: 2;
                 margin-bottom: 1px;
                 a{
@@ -369,11 +369,11 @@ html[xmlns] .flexslider .slides {
             margin-right: 2px;
             li{
                 margin-top: 0;
-                background-color: @spirit-pink !important;
+                background-color: #d7004e !important;
                 transform: translateY(-61px);
                 margin-right: -1px;
                 a{
-                    color: @spirit-pink !important;
+                    color: #d7004e !important;
                 }
             }
         }
